# doc-ocr

./: .env.example  .gitignore  PaddleOCR.yaml  README.md  agents.md  paddlex_config.yaml  pyproject.toml
.codex/plan/: hunyuan_ocr.md  invoice_rule_region_match.md  invoice_rule_template_flow.md  ocr-preprocess.md  paddle-ocr-client.md  paddle-ocr-predict-migration.md  preprocess_perspective_table.md  rule_anchor_first_row.md  增加env配置多个llm节点.md  给ocr加预处理.md
app/: __init__.py  main.py  state.py
app/api/: deps.py
app/api/routes/: health.py  invoice.py  ocr_debug.py
app/core/: config.py  logging.py
app/invoice_templates/: einvoice_general.json  einvoice_vat_special.json  einvoice_vat_special_property.json  vat_special_einvoice.json  vat_special_einvoice_property.json
app/prompts/: __init__.py  invoice_extraction_system.md  invoice_extraction_user.md
app/schemas/: invoice.py  ocr.py
app/services/llm/: __init__.py  base.py  openai_client.py
app/services/ocr/: __init__.py  base.py  hunyuan_ocr.py  paddle_ocr.py  paddle_vl.py  preprocess.py
app/services/pipelines/: base.py  invoice.py
app/services/rules/: __init__.py  invoice_rule_extractor.py  template_loader.py  template_matcher.py  template_schema.py  text_normalize.py
debug/ocr/20251221_175429_297446/: page_0.b64
debug/ocr/20251221_182606_579858/: page_0.b64
debug/ocr/20251221_200807_313663/: page_0.b64
tests/: test_health.py  test_hunyuan_ocr_client.py  test_invoice_pipeline_rule_path.py  test_invoice_rule_extractor.py  test_invoice_schema.py  test_paddle_ocr_client.py  test_paddle_vl_preprocess.py  test_preprocess.py  test_template_schema.py
