[project]
name = "doc-ocr"
version = "0.1.0"
description = "FastAPI-based OCR and invoice extraction service"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [{name = "Doc OCR Team"}]
dependencies = [
    # PaddleOCR 依赖
    "paddlepaddle-gpu==3.2.2",
    "paddleocr[doc-parser]==3.3.2",
    # 指定 URL 的 Safetensors
    "safetensors @ https://paddle-whl.bj.bcebos.com/nightly/cu126/safetensors/safetensors-0.6.2.dev0-cp38-abi3-linux_x86_64.whl",
    "uvicorn>=0.38.0",
    "fastapi>=0.124.0",
    "python-multipart>=0.0.20",
    "openai>=2.9.0",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

# --- 关键配置开始 ---

# 1. 告诉打包工具源码在 app 目录
[tool.hatch.build.targets.wheel]
packages = ["app"]

# 2. 必须显式声明 PyPI 为默认源 (解决 hatchling 找不到的问题)
[[tool.uv.index]]
name = "pypi"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

# 3. 添加 Paddle 的源作为扩展源
[[tool.uv.index]]
name = "paddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu129/"
explicit = false

# --- 关键配置结束 ---

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []